<resources>
    <string name="app_name">BoringMusicKotlin</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="play_button">PlayButton</string>
    <string name="previous_button">PreviousButton</string>
    <string name="next_button">NextButton</string>
    <string name="loop_button">LoopButton</string>
    <string name="cover_image">CoverImage</string>
    <string name="play_next">Play in the next:</string>
    <string name="singer_name">Singer Name</string>
    <string name="song_name">Song Name</string>
    <string name="index_songs">Index Songs</string>
    <string name="notes">Notes</string>
    <string name="about_me">About Me</string>
    <string name="setting">Setting</string>
</resources>