<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="690dp"
        tools:context=".fragments.HomeFragment">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="368dp"

            app:layout_constraintBottom_toTopOf="@+id/play_in_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/song_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:cardBackgroundColor="#ffffff"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/loop_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/SurfaceBlack"
                    app:strokeWidth="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/cover_image"
                            android:layout_width="match_parent"
                            android:layout_height="280dp"
                            android:layout_gravity="top"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/cover_image"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_album_black_24dp" />

                        <TextView
                            android:id="@+id/songname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/song_name"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/singername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/singer_name"
                            android:textSize="18dp" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/loop_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/purple_border"
                    android:contentDescription="@string/loop_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/next_button"
                    app:srcCompat="@drawable/ic_baseline_loop_24" />

                <ImageView
                    android:id="@+id/previous_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/black_border"
                    android:clickable="true"
                    android:contentDescription="@string/previous_button"
                    android:focusable="true"
                    app:layout_constraintBottom_toTopOf="@+id/next_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/song_card"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

                <ImageView
                    android:id="@+id/next_button"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/black_border"
                    android:contentDescription="@string/next_button"
                    app:layout_constraintBottom_toTopOf="@+id/loop_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/previous_button"
                    app:srcCompat="@drawable/ic_baseline_skip_next_24" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="368dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/play_button"
                    android:layout_width="@dimen/large_button_size"
                    android:layout_height="@dimen/large_button_size"
                    android:layout_marginTop="240dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/play_button"
                    android:src="@drawable/ic_baseline_play_arrow_24"
                    app:civ_border_color="@color/SurfaceBlack"
                    app:civ_border_width="4dp"
                    app:civ_circle_color="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VectorDrawableCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/play_in_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/play_next"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_in_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>